# django-docker-poetry

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  requirements.txt
blog/: models.py  serializers.py  urls.py  views.py
blog/tests/: conftest.py  factories.py  tests.py
core/: urls.py  wsgi.py
core/settings/: base.py  dev.py
docker/dev/: Dockerfile  entrypoint.sh
requirements/: base.txt  dev.txt
